--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "lighthouse": "node scripts/lighthouse.mjs"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "tailwindcss": "^3.4.0",
     "autoprefixer": "^10.4.16",
+    "lighthouse": "^12.0.0",
     "postcss": "^8.4.32",
-    "vite-plugin-compression": "^0.5.1",
-    "lighthouse": "^12.0.0"
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
