--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "generate-pages": "node scripts/generate-pages.mjs"
   },
   "dependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.5",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@types/node": "^24.9.2",
+    "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.16",
     "esbuild": "^0.24.0",
     "lighthouse": "^12.0.0",
