refactor: improve testimonials section and enhance mobile navigation accessibility
This commit enhances the testimonials section by updating the layout and adding JSON-LD structured data for better SEO. It also improves the mobile navigation by implementing focus trapping and keyboard accessibility features, ensuring a more user-friendly experience. Additionally, the CSS has been refined for better styling consistency and responsiveness.

--- a/vercel.json
+++ b/vercel.json
@@ -29,7 +29,7 @@
         { "key": "X-Frame-Options", "value": "DENY" },
         {
           "key": "Content-Security-Policy-Report-Only",
-          "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' https://images.unsplash.com data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self'; frame-ancestors 'none'; base-uri 'self'; form-action 'self' mailto:;"
+          "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' https://images.unsplash.com data:; font-src 'self'; connect-src 'self'; frame-ancestors 'none'; base-uri 'self'; form-action 'self' mailto:;"
         }
       ]
     }
