refactor: update .gitignore and remove Lighthouse runner to streamline development
This commit updates the .gitignore file to include additional build artifacts and temporary files, ensuring a cleaner repository. The Lighthouse local runner has been removed from the project to reduce dependency bloat and unnecessary Chromium downloads. Additionally, minor adjustments have been made to the HTML structure for improved readability and consistency.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+node_modules/
+dist/
+.DS_Store
+*.log
+coverage/
+lighthouse-report.html
+lighthouse-report.json
+*.br
 # Dependencies
 node_modules/
 
