refactor: enhance admin API configuration and improve accessibility features
This commit introduces new environment variables for the admin API configuration, allowing for better management of API endpoints. Additionally, it enhances accessibility by adding a "skip to main content" link and improving the styling of navigation elements for better user experience. The HTML structure has been updated for consistency, and various CSS improvements have been made to support new features.

--- a/env.sample
+++ b/env.sample
@@ -7,3 +7,7 @@ FORMS_MIN_SUBMIT_MS=3000
 # Analytics (optional)
 VITE_PLAUSIBLE_DOMAIN=
 
+# Admin API configuration
+VITE_ADMIN_API_URL=http://localhost:3001
+VITE_PUBLIC_API_URL=http://localhost:3001
+
