feat: implement admin access shortcut and enhance admin user management
This commit introduces a keyboard shortcut for quick access to the admin panel by detecting the input of the word "admin". Additionally, the admin user management functionality has been refactored to read from a JSON file instead of a database, improving maintainability and simplifying the authentication process. The Vite configuration has also been updated to route admin requests to the appropriate HTML page.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate-pages": "node scripts/generate-pages.mjs"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "sharp": "^0.33.4",
     "web-vitals": "^5.1.0"
   },
