--- a/server/package.json
+++ b/server/package.json
@@ -2,23 +2,21 @@
   "name": "portfolio-admin-server",
   "version": "1.0.0",
   "type": "module",
-  "description": "Admin panel backend for portfolio customization",
+  "description": "Admin panel backend for portfolio customization (JSON-auth only)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "init-db": "node scripts/init-database.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "express-validator": "^7.0.1"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
