updated some files

--- a/env.sample
+++ b/env.sample
@@ -11,3 +11,9 @@ VITE_PLAUSIBLE_DOMAIN=
 VITE_ADMIN_API_URL=http://localhost:3001
 VITE_PUBLIC_API_URL=http://localhost:3001
 
+# Server environment variables (see server/.env.example)
+# JWT_SECRET=your-secret-here (required in production)
+# JWT_EXPIRES_IN=24h
+# PORT=3001
+# CORS_ORIGIN=http://localhost:3000
+
