refactor: reorganize output structure and update asset references
- Updated .gitignore to include new build and output directories.
- Removed obsolete vercel.json configuration file.
- Enhanced Vite configuration with a new plugin to reorganize output pages.
- Updated asset references in index.html and admin/index.html to reflect new file names.
- Added new redirect rules for the admin route in the public _redirects file.
- Deleted unused CSS and JS files to clean up the project structure.
- Removed several HTML pages from the dist directory to streamline the project.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
-node_modules/
-.DS_Store
-*.log
-coverage/
-lighthouse-report.html
-lighthouse-report.json
-*.br
 # Dependencies
 node_modules/
+**/node_modules/
 
 # Production build
+dist/
+build/
+*.br
 
 # Env files
 .env
@@ -17,19 +14,33 @@ node_modules/
 # Editors/IDEs
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # OS junk
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Logs
+*.log
 npm-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
+
+# Coverage / reports
+coverage/
+lighthouse-report.html
+lighthouse-report.json
+.nyc_output
 
 # Hosting providers
 .vercel/
 .netlify/
 
-# Coverage / reports
-coverage/
+# Backup files
+*.backup
+*.bak
+*.tmp
