--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.2",
     "sharp": "^0.33.4",
     "web-vitals": "^5.1.0"
   },
